Add MOTD setting with input validation